--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,7 @@ body {
 
 
 .component-image-container {
-    background-color: red;
+    //background-color: red;
     overflow: hidden;
     display: flex;
     justify-content: center;
