--- a/src/app/components/projects-module/projects-module.component.html
+++ b/src/app/components/projects-module/projects-module.component.html
@@ -8,26 +8,26 @@
             <div class="modal-body">
                 <div class="mb-3">
                     <label for="formFileSm" class="form-label fw-bold">Project Image (5mb max)</label>
-                    <input class="form-control form-control-sm" id="formFileSm" type="file">
+                    <input class="form-control form-control-sm" id="formFileSm" type="file" #fileInput>
                 </div>
                 <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label fw-bold">Name</label>
                     <input class="form-control form-control-sm" type="text" placeholder="FullDev (Front-end Developer)"
-                        aria-label="name input" [value]="name">
+                        aria-label="name input" [value]="name" #nameInput>
                 </div>
                 <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label fw-bold">About</label>
-                    <textarea class="form-control" id="about" rows="3" [value]="about"></textarea>
+                    <textarea class="form-control" id="about" rows="3" [value]="about" #aboutInput></textarea>
                 </div>
                 <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label fw-bold">Github Link</label>
                     <input class="form-control form-control-sm" type="text" placeholder="https://github.com/BastidaNicolas/CarpinchoMarkets"
-                        aria-label="name input" [value]="repoLink">
+                        aria-label="name input" [value]="repoLink" #repoLinkInput>
                 </div>
                 <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label fw-bold">Website Link</label>
                     <input class="form-control form-control-sm" type="text" placeholder="https://carpincho.xyz/"
-                        aria-label="name input" [value]="pageLink">
+                        aria-label="name input" [value]="pageLink" #pageLinkInput>
                 </div>
                 <div class="">
                     <div class="row">
@@ -41,23 +41,25 @@
                     <div class="mb-3" *ngIf="addListItem">
                         <div class="mb-2">
                             <input class="form-control form-control-sm" type="text"
-                                placeholder="Tailwind" aria-label="name input">
+                                placeholder="Tailwind" aria-label="name input" #techNameInput>
                         </div>
-                        <button class="btn btn-primary rounded-0 btn-sm" type="submit">Add</button>
+                        <button class="btn btn-primary rounded-0 btn-sm" type="submit" (click)="onAddTech(techNameInput.value)">Add</button>
                     </div>
                     <ul class="ps-3">
-                        <li class="" *ngFor="let tech of techStack">
+                        <li class="" *ngFor="let tech of techStackArr">
                             <div class="row">
-                                <p class="col m-0">{{tech.name}}</p><button
-                                    class="btn col-1 p-0 border-0"><i class="bi bi-trash-fill"></i></button>
+                                <p class="col m-0">{{tech}}</p><button
+                                    class="btn col-1 p-0 border-0" (click)="onDeleteTech(tech)"><i class="bi bi-trash-fill"></i></button>
                             </div>
                         </li>
                     </ul>
                 </div>
             </div>
             <div class="modal-footer">
+                <button type="button" class="btn btn-danger rounded-0 me-auto" *ngIf="id" data-bs-dismiss="modal" (click)="onDeleteProject()">Delete</button>
+
                 <button type="button" class="btn btn-secondary rounded-0" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary rounded-0">Save</button>
+                <button type="button" class="btn btn-primary rounded-0" (click)="onSaveProject(fileInput.files, nameInput.value, aboutInput.value, repoLinkInput.value, pageLinkInput.value)" data-bs-dismiss="modal">Save</button>
             </div>
         </div>
     </div>
