--- a/src/app/components/skills-module/skills-module.component.html
+++ b/src/app/components/skills-module/skills-module.component.html
@@ -2,23 +2,25 @@
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content rounded-0">
             <div class="modal-header">
-                <h5 class="modal-title fw-bold">Hard & Soft Skills</h5>
+                <h5 class="modal-title fw-bold">Skills</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <div class="mb-3">
                     <label for="formFileSm" class="form-label fw-bold">Logo (5mb max)</label>
-                    <input class="form-control form-control-sm" id="formFileSm" type="file">
+                    <input class="form-control form-control-sm" id="formFileSm" type="file" #skillImg>
                 </div>
                 <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label fw-bold">Name</label>
                     <input class="form-control form-control-sm" type="text"
-                        placeholder="React.js" aria-label="name input" [value]="name">
+                        placeholder="React.js" aria-label="name input" [value]="name" #nameInput>
                 </div>
             </div>
             <div class="modal-footer">
+                <button type="button" class="btn btn-danger rounded-0 me-auto" *ngIf="id" data-bs-dismiss="modal" (click)="deleteSkill()">Delete</button>
+
                 <button type="button" class="btn btn-secondary rounded-0" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary rounded-0">Save</button>
+                <button type="button" class="btn btn-primary rounded-0" data-bs-dismiss="modal" (click)="saveSkill(skillImg.files, nameInput.value)">Save</button>
             </div>
         </div>
     </div>
