--- a/src/app/components/education/education.component.html
+++ b/src/app/components/education/education.component.html
@@ -18,7 +18,7 @@
                 <div class="row mb-3 mb-md-1 mx-0">
                     <div class="col-auto p-0 component-image-container" cdkDragHandle>
                         <div class="arrows-move-container fs-1" *ngIf="isEdit"><i class="bi bi-arrows-move"></i></div>
-                        <img class="component-image" src='{{"http://localhost:8080" + education.imageUrl}}' alt="">
+                        <img class="component-image" src='{{apiUrl + education.imageUrl}}' alt="">
                     </div>
                     <div class="col">
                         <div class="row">
