--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -18,7 +18,7 @@
                 <div class="row p-0 m-0 mb-2 mb-md-1">
                     <div class="col-auto p-0 component-image-container" cdkDragHandle>
                         <div class="arrows-move-container fs-1" *ngIf="isEdit"><i class="bi bi-arrows-move"></i></div>
-                        <img class="component-image" src='{{"http://localhost:8080" + experience.imageUrl}}' alt="">
+                        <img class="component-image" src='{{apiUrl + experience.imageUrl}}' alt="">
                     </div>
                     <div class="col">
                         <div class="row">
