--- a/src/app/components/skillz/skillz.component.html
+++ b/src/app/components/skillz/skillz.component.html
@@ -21,7 +21,7 @@
                         <div class="component-image-container" cdkDragHandle>
                             <div class="arrows-move-container fs-1" *ngIf="isEdit"><i class="bi bi-arrows-move"></i>
                             </div>
-                            <img class="component-image" src='{{"http://localhost:8080" + skill.imageUrl}}' alt=''>
+                            <img class="component-image" src='{{apiURL   + skill.imageUrl}}' alt=''>
                         </div>
                         <div class="ms-3">
                             <span class="fw-bold text-capitalize">
