chaned user credentials in modal

--- a/src/app/components/login-modal/login-modal.component.html
+++ b/src/app/components/login-modal/login-modal.component.html
@@ -25,8 +25,8 @@
                     <span>This account allows you to have an admin view but wont allow you to edit the page.</span>
                 </div>
                 <div class="mb-3 text-muted d-flex justify-content-evenly">
-                    <span>Username: user1</span>
-                    <span>Password: user1</span>
+                    <span>Username: user</span>
+                    <span>Password: user</span>
                 </div>
                 <!-- <div class="mb-2 text-center">
                     <span class="d-block" >Don't have an account?</span>
